--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,16 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/growyDancer.js"></script>
+    <script src="src/slidyDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="GrowyDancer">add a growy dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SlidyDancer">add a slidy dancer</a>    </div>
+      <a href="#" class="lineupButton" data-dancer-maker-function-name="LineupDancers">lineup all dancers</a>    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
