--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,10 +12,12 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="GrowyDancer">add a growy dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SlidyDancer">add a slidy dancer</a>    </div>
-      <a href="#" class="lineupButton" data-dancer-maker-function-name="LineupDancers">lineup all dancers</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="GrowyDancer">add a growy dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SlidyDancer">add a slidy dancer</a>
+      <a href="#" class="lineupButton" data-dancer-maker-function-name="LineupDancers">lineup all dancers</a>    
+      <a href="#" class="findPartner" data-dancer-maker-function-name="blah">find a partner</a>    
+      </div>
     <script src="src/init.js"></script>
   </body>
 </html>
