--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,9 +14,14 @@
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
     });
   </script>
+  <script src="src/init.js"></script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/growyDancerSpec.js"></script>
+  <script src="spec/slidyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/growyDancer.js"></script>
+  <script src="src/slidyDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
