--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,6 +8,7 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/growyDancer.js"></script>
     <script src="src/slidyDancer.js"></script>
+    <audio src ="lib/song.mp3" preload="auto" autoplay loop></audio>
   </head>
   <body>
     <div class="topbar">
