Centered batman growing and shrinking image Improved mouseeover to edit Window.dancers array instead of just the DOM Improved lineup to evenly distrubte dancers across the veritcal axis Added Moshpit to randomize dancer positions again

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,8 +16,11 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a> 
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="GrowyDancer">add a growy dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="SlidyDancer">add a slidy dancer</a>
-      <a href="#" class="lineupButton" data-dancer-maker-function-name="LineupDancers">lineup all dancers</a>    
-      <a href="#" class="findPartner" data-dancer-maker-function-name="blah">find a partner</a>    
+      <a href="#" class="lineupButton" data-dancer-maker-function-name="LineupDancers">Line Dance</a>    
+      <a href="#" class="findPartner" data-dancer-maker-function-name="blah">Partner Dance</a>
+
+      <a href="#" class="moshpit" data-dancer-maker-function-name="blah">Moshpit!</a>
+
       </div>
     <script src="src/init.js"></script>
   </body>
